2002-05-28  Chris Blumenberg  <cblu@apple.com>

	* Plugins.subproj/IFPluginDatabase.h:
	* Plugins.subproj/IFPluginDatabase.m:
	(-[IFPluginDatabase pluginForMimeType:]): renamed
	(-[IFPluginDatabase pluginForExtension:]): renamed
	(-[IFPluginDatabase pluginForFilename:]): renamed
	(findPlugins):
	* WebCoreSupport.subproj/IFWebCoreViewFactory.m: support for above renamed
	(-[IFWebCoreViewFactory viewForPluginWithURL:serviceType:arguments:baseURL:]):
	(-[IFWebCoreViewFactory viewForJavaAppletWithArguments:]):
	* WebView.subproj/IFWebDataSourcePrivate.mm:
	(-[IFWebDataSource _addURLHandle:]): fix for a nil handle being added to an array

2002-05-28  Darin Adler  <darin@apple.com>

	* WebCoreSupport.subproj/IFTextRenderer.m:
	(hasMissingGlyphs): Use recordSize instead of assuming records are sizeof(ATSLayoutRecord).
	(-[IFTextRenderer convertCharacters:length:toGlyphs:]): Free buffer after calling
	ATSUConvertCharToGlyphs; old code was using buffer after freeing it.
	(-[IFTextRenderer widthForString:]): Handle case where string is longer than
	LOCAL_GLYPH_BUFFER_SIZE.
	(-[IFTextRenderer slowPackGlyphsForCharacters:numCharacters:glyphBuffer:numGlyphs:]):
	(-[IFTextRenderer drawString:atPoint:withColor:]): Use recordSize instead of assuming records
	are sizeof(ATSLayoutRecord).
	(-[IFTextRenderer slowFloatWidthForCharacters:length:]): Use recordSize instead of assuming
	records are sizeof(ATSLayoutRecord).
	(-[IFTextRenderer floatWidthForCharacters:length:]): Remove extra rounding. The caller that
	converts the width to an integer already does the rounding.
	(-[IFTextRenderer extendCharacterToGlyphMapToInclude:]): Fix off by one error that caused us
	to include one extra character in each glyph map block. Also use recordSize instead of assuming
	records are sizeof(ATSLayoutRecord).

2002-05-27  John Sullivan  <sullivan@apple.com>

	Part of fix for 2922772 -- page title & location field don't
	show redirected URLs.

	* WebView.subproj/IFWebDataSource.mm: